// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders single word with caret 1`] = `
<DocumentFragment>
  .emotion-5 {
  overflow-wrap: normal;
  word-break: normal;
}

.emotion-0 {
  --text-opacity: 1;
  color: #057a55;
  color: rgba(5,122,85,var(--text-opacity));
}

.emotion-2 {
  --bg-opacity: 1;
  display: inline-block;
  overflow-wrap: normal;
  word-break: normal;
  margin-bottom: -0.25rem;
  height: 1.5rem;
  background-color: #3f83f8;
  background-color: rgba(63,131,248,var(--bg-opacity));
  width: 2px;
  margin-left: -1px;
  margin-right: -1px;
}

.emotion-3 {
  --text-opacity: 1;
  color: #d2d6dc;
  color: rgba(210,214,220,var(--text-opacity));
}

<span
    class="emotion-5"
  >
    <span
      class="correct emotion-0"
      data-testid="correct"
    >
      d
    </span>
    <span
      class="correct emotion-0"
      data-testid="correct"
    >
      o
    </span>
    <span
      class="emotion-2"
      data-testid="caret"
    />
    <span
      class="pending emotion-3"
      data-testid="pending"
    >
      g
    </span>
    <span
      class="pending emotion-3"
      data-testid="pending"
    >
      e
    </span>
  </span>
</DocumentFragment>
`;

exports[`renders template character on wrong typing in typealong mode 1`] = `
<DocumentFragment>
  .emotion-6 {
  overflow-wrap: normal;
  word-break: normal;
}

.emotion-0 {
  --text-opacity: 1;
  color: #057a55;
  color: rgba(5,122,85,var(--text-opacity));
}

.emotion-1 {
  --text-opacity: 1;
  color: #f98080;
  color: rgba(249,128,128,var(--text-opacity));
}

.emotion-4 {
  --bg-opacity: 1;
  display: inline-block;
  overflow-wrap: normal;
  word-break: normal;
  margin-bottom: -0.25rem;
  height: 1.5rem;
  background-color: #3f83f8;
  background-color: rgba(63,131,248,var(--bg-opacity));
  width: 2px;
  margin-left: -1px;
  margin-right: -1px;
}

.emotion-5 {
  --text-opacity: 1;
  color: #d2d6dc;
  color: rgba(210,214,220,var(--text-opacity));
}

<span
    class="emotion-6"
  >
    <span
      class="correct emotion-0"
      data-testid="correct"
    >
      w
    </span>
    <span
      class="wrong emotion-1"
      data-testid="wrong"
    >
      o
    </span>
    <span
      class="wrong emotion-1"
      data-testid="wrong"
    >
      r
    </span>
    <span
      class="wrong emotion-1"
      data-testid="wrong"
    >
      l
    </span>
    <span
      class="emotion-4"
      data-testid="caret"
    />
    <span
      class="pending emotion-5"
      data-testid="pending"
    >
      d
    </span>
  </span>
</DocumentFragment>
`;

exports[`renders template character on wrong typing in typealong mode 2`] = `
<DocumentFragment>
  .emotion-8 {
  overflow-wrap: normal;
  word-break: normal;
}

.emotion-0 {
  --text-opacity: 1;
  color: #057a55;
  color: rgba(5,122,85,var(--text-opacity));
}

.emotion-1 {
  --text-opacity: 1;
  color: #f98080;
  color: rgba(249,128,128,var(--text-opacity));
}

.emotion-7 {
  --bg-opacity: 1;
  display: inline-block;
  overflow-wrap: normal;
  word-break: normal;
  margin-bottom: -0.25rem;
  height: 1.5rem;
  background-color: #3f83f8;
  background-color: rgba(63,131,248,var(--bg-opacity));
  width: 2px;
  margin-left: -1px;
  margin-right: -1px;
}

<span
    class="emotion-8"
  >
    <span
      class="correct emotion-0"
      data-testid="correct"
    >
      w
    </span>
    <span
      class="wrong emotion-1"
      data-testid="wrong"
    >
      o
    </span>
    <span
      class="wrong emotion-1"
      data-testid="wrong"
    >
      r
    </span>
    <span
      class="wrong emotion-1"
      data-testid="wrong"
    >
      l
    </span>
    <span
      class="wrong emotion-1"
      data-testid="wrong"
    >
      d
    </span>
    <span
      class="wrong emotion-1"
      data-testid="wrong"
    >
      x
    </span>
    <span
      class="wrong emotion-1"
      data-testid="wrong"
    >
      x
    </span>
    <span
      class="emotion-7"
      data-testid="caret"
    />
  </span>
</DocumentFragment>
`;

exports[`renders user character on wrong typing in default mode 1`] = `
<DocumentFragment>
  .emotion-5 {
  overflow-wrap: normal;
  word-break: normal;
}

.emotion-0 {
  --text-opacity: 1;
  color: #057a55;
  color: rgba(5,122,85,var(--text-opacity));
}

.emotion-1 {
  --text-opacity: 1;
  color: #f98080;
  color: rgba(249,128,128,var(--text-opacity));
}

.emotion-4 {
  --bg-opacity: 1;
  display: inline-block;
  overflow-wrap: normal;
  word-break: normal;
  margin-bottom: -0.25rem;
  height: 1.5rem;
  background-color: #3f83f8;
  background-color: rgba(63,131,248,var(--bg-opacity));
  width: 2px;
  margin-left: -1px;
  margin-right: -1px;
}

<span
    class="emotion-5"
  >
    <span
      class="correct emotion-0"
      data-testid="correct"
    >
      w
    </span>
    <span
      class="wrong emotion-1"
      data-testid="wrong"
    >
      w
    </span>
    <span
      class="wrong emotion-1"
      data-testid="wrong"
    >
      w
    </span>
    <span
      class="wrong emotion-1"
      data-testid="wrong"
    >
      w
    </span>
    <span
      class="emotion-4"
      data-testid="caret"
    />
  </span>
</DocumentFragment>
`;
